tests/toy/neg/001062_mutation.toylang
program a = { if a then sleep a else sleep; } .
